add remove .animalfacts for testing.
Co-authored-by: Kim Brannian <brannian@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
         </label>
       </div>
       <button type="submit" class="btn btn-dark">Submit</button>
-      <div id="lionfacts">
-        <h1>All About Lions</h1>
-        <p>Lions - Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ullam adipisci mollitia dicta quaerat magnam corporis molestiae numquam minima ipsam a commodi iure repudiandae delectus laudantium illum voluptatibus sed? Earum.</p>
-      </div>
-      <div id="tigerfacts">
-        <h1>All About Tigers</h1>
-        <p>Tigers - Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ullam adipisci mollitia dicta quaerat magnam corporis molestiae numquam minima ipsam a commodi iure repudiandae delectus laudantium illum voluptatibus sed? Earum.</p>
-      </div>
-      <div id="bearfacts">
-        <h1>All About Bears</h1>
-        <p>Bears - Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ullam adipisci mollitia dicta quaerat magnam corporis molestiae numquam minima ipsam a commodi iure repudiandae delectus laudantium illum voluptatibus sed? Earum.</p>
-      </div>
-      <div id="default">
-        <h1>make a selection</h1>
+      <div class="animalfacts">
+        <div id="lionfacts">
+          <h1>All About Lions</h1>
+          <p>Lions - Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ullam adipisci mollitia dicta quaerat magnam corporis molestiae numquam minima ipsam a commodi iure repudiandae delectus laudantium illum voluptatibus sed? Earum.</p>
+        </div>
+        <div id="tigerfacts">
+          <h1>All About Tigers</h1>
+          <p>Tigers - Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ullam adipisci mollitia dicta quaerat magnam corporis molestiae numquam minima ipsam a commodi iure repudiandae delectus laudantium illum voluptatibus sed? Earum.</p>
+        </div>
+        <div id="bearfacts">
+          <h1>All About Bears</h1>
+          <p>Bears - Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, ullam adipisci mollitia dicta quaerat magnam corporis molestiae numquam minima ipsam a commodi iure repudiandae delectus laudantium illum voluptatibus sed? Earum.</p>
+        </div>
       </div>
     </form>
   </div>
